# FaceGate

./: README.md  build.gradle  settings.gradle
MyFace/: CMakeLists.txt  build.gradle
MyFace/src/main/: AndroidManifest.xml
MyFace/src/main/assets/: hat_v1.tflite
MyFace/src/main/cpp/mnn_cpp/: Ultra_jni.cpp
MyFace/src/main/cpp/ncnn_cpp/: detect.cpp  detect.h  face_jni.cpp  recognize.cpp  recognize.h
MyFace/src/main/java/com/epimenides/myface/: FaceLib.java
MyFace/src/main/java/com/epimenides/myface/UltraNet/: FaceSDKNative.java
MyFace/src/main/java/com/epimenides/myface/env/: Classifier.java  ClassifierFloat.java  ClassifierQuantized.java  Recognition.java
MyFace/src/main/java/com/epimenides/myface/faceantispoofing/: Ir_Fas.java
MyFace/src/main/java/com/epimenides/myface/facedetection/: DetectRegulationFace.java  DetectResult.java
MyFace/src/main/java/com/epimenides/myface/hat/: Helmet.java  RecognitionHelmet.java
MyFace/src/main/java/com/epimenides/myface/mobilefacenet/: FaceEvaluator.java  FaceFeature.java  RecognitionFace.java
MyFace/src/main/java/com/epimenides/myface/tools/: Box.java  MtcnnUtil.java
app/: build.gradle
app/src/androidTest/java/com/wudi/facegate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/android_serialport_api/: SerialPort.java  SerialPortFinder.java
app/src/main/res/drawable/: bg_button2.xml  bg_psw.xml
app/src/main/res/layout/: activity_init.xml  activity_main.xml  activity_password.xml  activity_setting.xml  item_log.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/main/res/values-sw384dp/: dimens.xml
app/src/main/res/values-sw392dp/: dimens.xml
app/src/main/res/values-sw400dp/: dimens.xml
app/src/main/res/values-sw410dp/: dimens.xml
app/src/main/res/values-sw411dp/: dimens.xml
app/src/main/res/values-sw480dp/: dimens.xml
app/src/main/res/values-sw533dp/: dimens.xml
app/src/main/res/values-sw592dp/: dimens.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-v19/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+48 files in other folders)
